<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".info.InfoFragment">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rowCount="3"
        app:columnCount="2">

        <Button
            android:id="@+id/button_finance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_finance" />

        <Button
            android:id="@+id/button_sante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sante" />

        <Button
            android:id="@+id/button_logement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_logement" />

        <Button
            android:id="@+id/button_jobs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_jobs" />

        <Button
            android:id="@+id/button_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_food" />

        <Button
            android:id="@+id/button_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_events" />
    </androidx.gridlayout.widget.GridLayout>

    <ImageButton
        android:id="@+id/button_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back" />

</LinearLayout>